# C-language-data-structure

data structure/: CMakeLists.txt
data structure/Dynamic and static sequence table/: Dynamic linear list.c  Sqlist.c  Static linear list.c
data structure/Stack/: SqStack.c
data structure/single linked list/: ClinkList.c  LinkList.c  single linked list.c
